RESOLVED FIXED231769
[AppleWin] Controls are not being rendered
https://bugs.webkit.org/show_bug.cgi?id=231769
Summary [AppleWin] Controls are not being rendered
Per Arne Vollan
Reported 2021-10-14 13:34:44 PDT
Controls like checkboxes and buttons are not being rendered in AppleWin.
Attachments
Patch (1.57 KB, patch)
2021-10-14 13:39 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2021-10-14 13:35:18 PDT
Per Arne Vollan
Comment 2 2021-10-14 13:39:49 PDT
Fujii Hironori
Comment 3 2021-10-14 13:53:42 PDT
Comment on attachment 441273 [details] Patch Sorry for the breakage. LGTM. But, I'm wondering why layout tests didn't catch the regression.
Per Arne Vollan
Comment 4 2021-10-14 14:42:25 PDT
(In reply to Fujii Hironori from comment #3) > Comment on attachment 441273 [details] > Patch > > Sorry for the breakage. LGTM. But, I'm wondering why layout tests didn't > catch the regression. Yes, that is a good point. I would expect there to be test coverage for this. Thanks for reviewing!
EWS
Comment 5 2021-10-14 15:22:14 PDT
Committed r284201 (243015@main): <https://commits.webkit.org/243015@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 441273 [details].
Note You need to log in before you can comment on or make changes to this bug.