Cherry-pick r284201. rdar://problem/83670287

[AppleWin] Controls are not being rendered
    https://bugs.webkit.org/show_bug.cgi?id=231769
    <rdar://problem/83670287>

    Reviewed by Fujii Hironori.

    Controls are not being rendered because the LocalWindowsContext destructor is no longer blitting the bitmap contents to the hdc.
    The test in GraphicsContext::getWindowsContext needs to match the test in GraphicsContext::releaseWindowsContext.

    * platform/graphics/win/GraphicsContextWin.cpp:
    (WebCore::GraphicsContext::getWindowsContext):

    Canonical link: https://commits.webkit.org/243015@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284201 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.264@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@284620 268f45cc-cd09-0410-ab3c-d52691b4dbfc